Atualização do pom.xml.

--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.7.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>br.com</groupId>
 	<artifactId>producer</artifactId>
 	<version>1.0.0</version>
 	<name>producer</name>
-	<description>Serviço responsável por produzir mensagens para o RabbitMQ.</description>
+	<description>Serviço responsável por produzir mensagens para o RabbitMQ</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
